ui-fix-page-alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 * {
   font-family: 'Inter', 'Segoe UI', 'Roboto', sans-serif;
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
 
 #form-sign-up {
   background: url('../images/home.png') no-repeat 100%;
   min-height: 100vh;
-  padding: 1.875rem;
+  padding: 1rem;
   display: grid;
   place-items: center;
 }
